[package]
name = "bevysph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.5", features = ["dynamic"]}
rand = {version="0.8.0", features=["small_rng"]}
# cgmath = { git = "https://github.com/rustgd/cgmath", rev="50a345b", features=["mint", "rand"] }
cgmath = { git = "https://github.com/rustgd/cgmath", features=["mint", "rand"] }
bevy_prototype_lyon = "0.3.1"
rayon = "1.5"
microprofile = { git = "https://github.com/jonasmr/microprofile-rust.git", rev="37f5844" } #, features = ["disabled"] }

[dev-dependencies]
more-asserts = "0.2.1"
criterion = "0.3"
