[package]
name = "bevysph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate_type = ["cdylib", "lib"]

[dependencies]
bevy = {version = "0.5", features = ["dynamic"]}
rand = {version="0.8.0", features=["small_rng"]}
# cgmath = { git = "https://github.com/rustgd/cgmath", rev="50a345b", features=["mint", "rand"] }
cgmath = { git = "https://github.com/rustgd/cgmath", features=["mint", "rand"] }
# bevy_prototype_lyon = "0.3.1"
rayon = "1.5"
microprofile = { git = "https://github.com/jonasmr/microprofile-rust.git", rev="37f5844" } #, features = ["disabled"] }
itertools = "0.4.6"
isosurface = "0.1.0-alpha.0"

[dev-dependencies]
more-asserts = "0.2.1"
criterion = "0.3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false



